Fix play card media so intrinsic image ratios can't stretch the grid.
Absolute-fill images and videos inside the aspect-ratio frame so Duet Mug matches the other square play cards.

--- a/src/Wireframe.css
+++ b/src/Wireframe.css
@@ -302,6 +302,7 @@
 }
 
 .wireframe__media {
+  position: relative;
   width: 100%;
   aspect-ratio: 1184 / 666;
   overflow: clip;
@@ -319,6 +320,8 @@
 
 .wireframe__media img,
 .wireframe__media video {
+  position: absolute;
+  inset: 0;
   width: 100%;
   height: 100%;
   display: block;
